--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -141,6 +141,32 @@ services:
     networks:
       - backend
 
+  review-service:
+    build:
+      context: .
+      dockerfile: docker/review-service.Dockerfile
+    ports:
+      - "8082:8082"
+    depends_on:
+      eureka-server:
+        condition: service_healthy
+      config-server:
+        condition: service_healthy
+      user-service:
+        condition: service_healthy
+    environment:
+      EUREKA_URL: http://eureka-server:8761/eureka/
+      CONFIG_SERVER_URL: http://config-server:8888
+      DATASOURCE_URL: jdbc:postgresql://db:5432/postgres
+    healthcheck:
+      test: "curl --silent --fail review-service:8082/actuator/health | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    networks:
+      - backend
+
 
 volumes:
   pgdata:
