--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <module>listing-service</module>
         <module>reactive-security-module</module>
         <module>deal-service</module>
+        <module>review-service</module>
+        <module>review-service</module>
     </modules>
 
     <properties>
@@ -55,6 +57,11 @@
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct</artifactId>
                 <version>1.6.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-core</artifactId>
+                <version>${org.liquibase.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
