--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>3.0.0</version>
                     <configuration>
-                        <argLine>--enable-preview</argLine>
+                        <argLine>@{argLine} --enable-preview</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -84,7 +84,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.0.0</version>
                     <configuration>
-                        <argLine>--enable-preview</argLine>
+                        <argLine>@{argLine} --enable-preview</argLine>
                     </configuration>
                 </plugin>
 
