--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -165,6 +165,12 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>**/mapper/**</exclude>
+                    </excludes>
+                </configuration>
+
             </plugin>
 
             <plugin>
