--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            <version>1.18.36</version>
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
@@ -190,6 +190,7 @@
                             <path>
                                 <groupId>org.projectlombok</groupId>
                                 <artifactId>lombok</artifactId>
+                                <version>1.18.36</version>
                             </path>
                             <path>
                                 <groupId>org.mapstruct</groupId>
