--- a/market-service/src/main/resources/application.yaml
+++ b/market-service/src/main/resources/application.yaml
@@ -28,6 +28,19 @@ spring:
       pageable:
         max-page-size: 50
 
+  config:
+    import: 'configserver:'
+
+  cloud:
+    config:
+      uri: ${CONFIG_SERVER_URL:http://localhost:8888}
+      fail-fast: true
+      retry:
+        initial-interval: 2000
+        max-interval: 10000
+        multiplier: 2
+        max-attempts: 5
+
 eureka:
   instance:
     hostname: localhost
