--- a/market-service/pom.xml
+++ b/market-service/pom.xml
@@ -172,12 +172,30 @@
             </plugin>
 
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <argLine>@{argLine}</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <argLine>@{argLine}</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${org.jacoco.version}</version>
+                <version>0.8.12</version>
                 <configuration>
                     <excludes>
-                        <exclude>**/*ru/itmo/service/market/mapper/**</exclude>
+                        <exclude>**/*ru/itmo/marketplace/api/**</exclude>
+                        <exclude>**/*ru/itmo/marketplace/model/**</exclude>
+                        <exclude>**/*ru/itmo/marketplace/mapper/**</exclude>
                     </excludes>
                 </configuration>
                 <executions>
@@ -188,7 +206,7 @@
                     </execution>
                     <execution>
                         <id>report</id>
-                        <phase>test</phase>
+                        <phase>verify</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
@@ -199,6 +217,7 @@
                             <goal>check</goal>
                         </goals>
                         <phase>test</phase>
+
                         <configuration>
                             <rules>
                                 <rule>
@@ -206,27 +225,20 @@
                                         <limit>
                                             <counter>LINE</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>60%</minimum>
+                                            <minimum>70%</minimum>
                                         </limit>
                                     </limits>
                                 </rule>
                             </rules>
                             <excludes>
-                                <exclude>**/*ru/itmo/service/market/mapper/**</exclude>
+                                <exclude>**/*ru/itmo/marketplace/api/**</exclude>
+                                <exclude>**/*ru/itmo/marketplace/model/**</exclude>
                             </excludes>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <includes>
-                        <include>**/*Test.java</include>
-                    </includes>
-                </configuration>
-            </plugin>
+
 
         </plugins>
     </build>
