--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -20,6 +20,7 @@ spring:
       httpclient:
         connect-timeout: 1000
         response-timeout: 5s
+
       routes:
         - id: users-service
           uri: lb://users-service
@@ -50,11 +51,13 @@ spring:
             - AuthenticationFilter
 
         - id: notification-service
-          uri: lb:ws://notification-service
+          uri: lb://notification-service
           predicates:
             - Path=/ws/**
           filters:
+            - AuthParamToHeaderFilter
             - AuthenticationFilter
+            - RemoveRequestHeader=Origin
 
 eureka:
   instance:
